add a new print

--- a/test.ipynb
+++ b/test.ipynb
@@ -145,7 +145,8 @@
     "print(result3)\n",
     "print(result4)\n",
     "print(result5)\n",
-    "print(result6)"
+    "print(result6)\n",
+    "print(\"this is test\")"
    ]
   },
   {
